force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/SUMMARY_DEAL_DETAIL__c.object-meta.xml
<CustomObject>
    <label>SUMMARY DEAL DETAIL</label>
    <nameField>
        <label>SUMMARY DEAL DETAIL</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMMARY DEAL DETAILS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>