force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/DATE_CREATED__c.field-meta.xml
<CustomField>
    <fullName>DATE_CREATED__c</fullName>
    <label>DATE CREATED</label>
    <type>DateTime</type>
</CustomField>