force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/DAYS_del__c.field-meta.xml
<CustomField>
    <fullName>DAYS_del__c</fullName>
    <label># DAYS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>