force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/DEAL_REGIONS__c.field-meta.xml
<CustomField>
    <fullName>DEAL_REGIONS__c</fullName>
    <label>DEAL REGIONS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AFRICA</fullName>
            </value>
            <value>
                <fullName>AU - NSW</fullName>
            </value>
            <value>
                <fullName>AU - NT</fullName>
            </value>
            <value>
                <fullName>AU - QLD</fullName>
            </value>
            <value>
                <fullName>AU - SA</fullName>
            </value>
            <value>
                <fullName>AU - TAS</fullName>
            </value>
            <value>
                <fullName>AU - VIC</fullName>
            </value>
            <value>
                <fullName>AU - WA</fullName>
            </value>
            <value>
                <fullName>BORNEO</fullName>
            </value>
            <value>
                <fullName>BURMA</fullName>
            </value>
            <value>
                <fullName>CAMBODIA</fullName>
            </value>
            <value>
                <fullName>CARIBBEAN</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>EUROPE</fullName>
            </value>
            <value>
                <fullName>HAWAII</fullName>
            </value>
            <value>
                <fullName>ICELAND</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>INDONESIA</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>MIDDLE EAST</fullName>
            </value>
            <value>
                <fullName>NTH AMER</fullName>
            </value>
            <value>
                <fullName>PACIFIC</fullName>
            </value>
            <value>
                <fullName>RTW</fullName>
            </value>
            <value>
                <fullName>STH AMER</fullName>
            </value>
            <value>
                <fullName>THAILAND</fullName>
            </value>
            <value>
                <fullName>VIETNAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>