force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/DEAL_TYPE__c.field-meta.xml
<CustomField>
    <fullName>DEAL_TYPE__c</fullName>
    <label>DEAL TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MULTI PARTNER ONLY</fullName>
            </value>
            <value>
                <fullName>PARTNER ONLY</fullName>
            </value>
            <value>
                <fullName>TAD MULTI</fullName>
            </value>
            <value>
                <fullName>TAD ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>