force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/DEPARTURE_DATE_DETAILS__c.field-meta.xml
<CustomField>
    <fullName>DEPARTURE_DATE_DETAILS__c</fullName>
    <label>DEPARTURE DATE DETAILS</label>
    <type>TextArea</type>
</CustomField>