force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/DEPARTURE_DATES__c.field-meta.xml
<CustomField>
    <fullName>DEPARTURE_DATES__c</fullName>
    <label>DEPARTURE DATES</label>
    <type>Date</type>
</CustomField>