force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/FLASH_DEAL__c.field-meta.xml
<CustomField>
    <fullName>FLASH_DEAL__c</fullName>
    <label>FLASH DEAL</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>