force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/FLIGHT_REQUEST__c.field-meta.xml
<CustomField>
    <fullName>FLIGHT_REQUEST__c</fullName>
    <label>FLIGHT REQUEST #</label>
    <type>TextArea</type>
</CustomField>