force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/HIGH_SEASON_DATES_AND_SURCHARGES__c.field-meta.xml
<CustomField>
    <fullName>HIGH_SEASON_DATES_AND_SURCHARGES__c</fullName>
    <label>HIGH SEASON DATES AND SURCHARGES</label>
    <type>TextArea</type>
</CustomField>