force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/ITINERARY_LAST_DAY__c.field-meta.xml
<CustomField>
    <fullName>ITINERARY_LAST_DAY__c</fullName>
    <label>ITINERARY LAST DAY</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>