force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/LONG_DEAL_NAME__c.field-meta.xml
<CustomField>
    <fullName>LONG_DEAL_NAME__c</fullName>
    <label>LONG DEAL NAME</label>
    <type>TextArea</type>
</CustomField>