force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/MAJOR_PRODUCT_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>MAJOR_PRODUCT_CATEGORY__c</fullName>
    <label>MAJOR PRODUCT CATEGORY</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCOMM ONLY</fullName>
            </value>
            <value>
                <fullName>CRUISE</fullName>
            </value>
            <value>
                <fullName>FLIGHT</fullName>
            </value>
            <value>
                <fullName>LAND</fullName>
            </value>
            <value>
                <fullName>STOP OVER ACCOMM ONLY</fullName>
            </value>
            <value>
                <fullName>TRANSFER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>