force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/MAX_NET_MAIN__c.field-meta.xml
<CustomField>
    <fullName>MAX_NET_MAIN__c</fullName>
    <label>MAX NET MAIN</label>
    <type>TextArea</type>
</CustomField>