force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/SCHEDULED_OFFLINE_DATE__c.field-meta.xml
<CustomField>
    <fullName>SCHEDULED_OFFLINE_DATE__c</fullName>
    <label>SCHEDULED OFFLINE DATE</label>
    <type>Date</type>
</CustomField>