force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/SHORT_DEAL_NAME__c.field-meta.xml
<CustomField>
    <fullName>SHORT_DEAL_NAME__c</fullName>
    <label>SHORT DEAL NAME</label>
    <type>TextArea</type>
</CustomField>