force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/SUB_PRODUCT_CATEGORIES__c.field-meta.xml
<CustomField>
    <fullName>SUB_PRODUCT_CATEGORIES__c</fullName>
    <label>SUB PRODUCT CATEGORIES</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HOTEL ACCOM</fullName>
            </value>
            <value>
                <fullName>TRAIN TOUR</fullName>
            </value>
            <value>
                <fullName>GUIDE TOUR</fullName>
            </value>
            <value>
                <fullName>NATURE TOUR</fullName>
            </value>
            <value>
                <fullName>OTHER ACCOMM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>