force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/SUGGESTED_MARKETING_TIER__c.field-meta.xml
<CustomField>
    <fullName>SUGGESTED_MARKETING_TIER__c</fullName>
    <label>SUGGESTED MARKETING TIER</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>