force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/VALID_FROM__c.field-meta.xml
<CustomField>
    <fullName>VALID_FROM__c</fullName>
    <label>VALID FROM</label>
    <type>Date</type>
</CustomField>