force-app/main/default/objects/SUMMARY_DEAL_DETAIL__c/fields/VALID_TO__c.field-meta.xml
<CustomField>
    <fullName>VALID_TO__c</fullName>
    <label>VALID TO</label>
    <type>Date</type>
</CustomField>